@@ -8,7 +8,7 @@ In progress:
 
 Open bugs:
 
-- The smallest non-bonded distance output is sometimes incorrect.
+(none)
 
 Planned/requested features:
 
