@@ -1,9 +1,10 @@
 Systre 1.1.5:
 
-- The embedding step can now be skipped all together.
+- Bug fix: the smallest non-bonded distance reported was occasionally incorrect.
+- The embedding step can now be skipped altogether.
 - A connectivity value of 0 for an atom is now read as 'undetermined'.
 - The GUI version now has an option to process whole files without stopping.
-- Integer numbers in input files can now start with a '+' character.
+- Integer numbers in input files may now start with a '+' character.
 - Made archives of RCSR nets and zeolite frameworks current as of 2008-07-07.
 - Abbreviated Herman-Mauguin symbols for monoclinic groups are now recognized.
 
